--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="/Module 5(Developer Portfolio)/developer-portfolio/style/portfolio.css"
-    />
+    <link rel="stylesheet" href="/style/portfolio.css">
   </head>
   <body>
     <header class="header">
