--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
+    <script src="https://kit.fontawesome.com/1d311910fa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/portfolio.css">
   </head>
   <body>
@@ -26,8 +27,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-secondary">Contact</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-secondary"><i class="fa-regular fa-phone"></i> Contact</button>
         </div>
         <img src="images/hardy.png" alt="" />
       </div>
@@ -179,7 +180,7 @@
             </div>
       </div>
         <div class="resume-btn">
-            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
 
